--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="teal">#81b7a9</color>
+
+    <color name="accent_color">#03DAC5</color>
+    <color name="page_background">#81b7a9 </color> <!-- background: "teal" -->
+    <color name="primary_color">#6200EE</color> <!-- Example: Purple -->
+
+    <!-- calendar -->
+    <color name="date_text_color">#000000</color>
+    <color name="week_day_text_color">#FF000000</color>
+
 </resources>
