--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,37 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="backgroundColor"
+    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
 <!--to include: FrameLayout to display the frags + everything else-->
 
+    <com.example.app0.moodtracker.MoodCalendarView
+        android:id="@+id/mood_calendar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-
-
-
+    <FrameLayout
+        android:id="@+id/mood_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/mood_calendar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
     <!--closing code dont touch-->
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <!-- CustomCalendar -->
+    <!--
+    <com.example.app0.ui.CustomCalendarView
+        android:id="@+id/customCalendarView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+-->
