update: chatbot feature

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,11 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:id="@+id/journal_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <FrameLayout
         android:id="@+id/mood_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
