update: moodtracker feature

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="#F5F5F5"
     tools:context=".MainActivity">
 
+<!-- call mood fragment -->
     <FrameLayout
         android:id="@+id/mood_fragment_container"
         android:layout_width="match_parent"
