--- a/app/src/main/res/layout/mood_dialog.xml
+++ b/app/src/main/res/layout/mood_dialog.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- Smaller Space Before Dialog (Fixed Height Instead of Weight) -->
+<!--    -->
+    <!-- add space before the dialog so it doesnt cover calendar (use fixed height) -->
     <View
         android:layout_width="match_parent"
         android:layout_height="400dp"/>  <!-- Adjust this value to move it up/down -->
@@ -17,8 +18,6 @@
         android:elevation="4dp"
         android:padding="16dp"
         android:maxHeight="0dp"> <!-- Limit height to prevent it from taking up the full screen -->
-
-
 
             <TextView
                 android:layout_width="wrap_content"
@@ -36,6 +35,8 @@
                 android:src="@android:drawable/ic_menu_close_clear_cancel" />
         </RelativeLayout>
 
+
+<!--    the emojis -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
