update: comments added

--- a/app/src/main/res/layout/day_cell_layout.xml
+++ b/app/src/main/res/layout/day_cell_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="40dp"
     android:padding="2dp">
 
-<!--    for text above calendar when date is not selected -->
+<!--    shows how individual date cells will appear with the mood icon -->
 
     <TextView
         android:id="@+id/day_text"
