--- a/app/src/main/res/layout/calendar_layout.xml
+++ b/app/src/main/res/layout/calendar_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-<!-- for mood -->
+<!-- for mood - overall calendar structure -->
 
     <!-- Header with month navigation -->
     <RelativeLayout
