--- a/app/src/main/res/layout/calendar_layout.xml
+++ b/app/src/main/res/layout/calendar_layout.xml
@@ -18,9 +18,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:background="?attr/selectableItemBackgroundBorderless"
+
+            android:background="@color/teal"
             android:src="@drawable/ic_back"
             android:contentDescription="Previous month" />
+        <!--android:background="?attr/selectableItemBackgroundBorderless"-->
 
         <TextView
             android:id="@+id/month_year_text"
@@ -36,10 +38,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_dropdown"
-            android:rotation="270"
+            android:background="@color/teal"
+
+            android:src="@drawable/ic_back"
+            android:rotation="180"
             android:contentDescription="Next month" />
+
+
     </RelativeLayout>
 
     <!-- Day of week headers -->
