--- a/app/src/main/res/layout/day_cell_layout.xml
+++ b/app/src/main/res/layout/day_cell_layout.xml
@@ -2,23 +2,28 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/day_container"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:padding="2dp">
+    android:layout_height="45dp"
+    android:padding="1dp">
 
 <!--    for text above calendar when date is not selected -->
+
+    <ImageView
+        android:id="@+id/mood_icon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_gravity="center"
+        android:translationY="-8dp"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/day_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="14sp" />
+        android:layout_gravity="center|bottom"
+        android:textSize="10sp"
+        android:textColor="#000000" />
 
-    <ImageView
-        android:id="@+id/mood_icon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_gravity="bottom|center_horizontal"
-        android:visibility="gone" />
+
 
 </FrameLayout>
+
