--- a/app/src/main/res/layout/item_calendar_day.xml
+++ b/app/src/main/res/layout/item_calendar_day.xml
@@ -5,7 +5,7 @@
     android:layout_height="48dp"
     android:padding="2dp">
 
-<!-- when date is selected, mood dialog covers calendar -->
+    <!-- when date is selected, mood dialog covers calendar -->
 
     <ImageView
         android:id="@+id/mood_icon"
@@ -23,5 +23,20 @@
         android:elevation="2dp"
         android:textColor="#000000"
         android:textSize="12sp" />
+
+
+
+    <Button
+        android:id="@+id/updateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="88dp"
+        android:minHeight="48dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/teal"
+        android:textColor="@android:color/white"
+        android:text="Edit" />
+
+
 
 </FrameLayout>
