--- a/app/src/main/res/layout/item_calendar_day.xml
+++ b/app/src/main/res/layout/item_calendar_day.xml
@@ -9,6 +9,7 @@
 
     <ImageView
         android:id="@+id/mood_icon"
+        android:src="@drawable/mood_background_empty"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_gravity="center"
