--- a/app/src/main/res/drawable/activity_progress_page.xml
+++ b/app/src/main/res/drawable/activity_progress_page.xml
@@ -230,4 +230,15 @@
         </LinearLayout>
     </LinearLayout>
 
+    <!-- Fragment Container -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="10dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
