--- a/app/src/main/res/layout/activity_progress_page.xml
+++ b/app/src/main/res/layout/activity_progress_page.xml
@@ -230,4 +230,6 @@
         </LinearLayout>
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout> 
+
+<!--This xml was written with the help of AI and edited by Cho Lei Lei Mon-->
