Credits for ai usage in fragment_add_goal.xml

--- a/app/src/main/res/layout/fragment_add_goal.xml
+++ b/app/src/main/res/layout/fragment_add_goal.xml
@@ -162,4 +162,6 @@
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-</RelativeLayout>
+</RelativeLayout> 
+
+<!--This xml was written with the help of AI and edited by Cho Lei Lei Mon-->
