--- a/app/src/main/res/drawable/circular_progress_bar.xml
+++ b/app/src/main/res/drawable/circular_progress_bar.xml
@@ -10,12 +10,7 @@
         android:shape="ring"
         android:thickness="8dp"
         android:useLevel="true">
-        <gradient
-            android:angle="0"
-            android:endColor="#4CAF50"
-            android:startColor="#000000"
-            android:type="sweep"
-            android:useLevel="false" />
+        <solid android:color="#446860" />
     </shape>
 
 </rotate>
