--- a/app/src/main/res/drawable/circular_shape.xml
+++ b/app/src/main/res/drawable/circular_shape.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:innerRadiusRatio="2.5"
     android:shape="ring"
-    android:thickness="3dp"
+    android:thickness="5dp"
     android:useLevel="false">
-    <solid android:color="#4CAF50" />
+    <solid android:color="#FFF5F5" />
 </shape>
