--- a/app/src/main/res/layout/activity_progress_page.xml
+++ b/app/src/main/res/layout/activity_progress_page.xml
@@ -21,8 +21,8 @@
         <ProgressBar
             android:id="@+id/progress_circle"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="@drawable/circular_shape"
             android:indeterminate="false"
             android:progressDrawable="@drawable/circular_progress_bar"
